; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/not_so_minidox/extr_serial.c_sync_recv.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/not_so_minidox/extr_serial.c_sync_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sync_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sync_recv() #0 {
  %1 = call i32 (...) @serial_input()
  br label %2

2:                                                ; preds = %6, %0
  %3 = call i32 (...) @serial_read_pin()
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  br i1 %5, label %6, label %7

6:                                                ; preds = %2
  br label %2

7:                                                ; preds = %2
  %8 = call i32 (...) @serial_delay()
  ret void
}

declare dso_local i32 @serial_input(...) #1

declare dso_local i32 @serial_read_pin(...) #1

declare dso_local i32 @serial_delay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
